# NewSymbion

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  build-releases.sh  cargo.toml  clone-agent-only.sh
.github/workflows/: release.yml
contracts/: hosts.wake.v1.json  kernel.health.v1.json
contracts/http/: api.contracts.v1.json  api.hosts.v1.json  api.ports.memo.v1.json  api.system.health.v1.json  api.wake.v1.json
contracts/mqtt/: agents.command.v1.json  agents.heartbeat.v1.json  agents.registration.v1.json  agents.response.v1.json  hosts.heartbeat.v2.json  notes.command.v1.json  notes.response.v1.json
devkit/: Cargo.toml  contract-tester.py  scaffold-plugin.py
devkit/src/: contract_helpers.rs  lib.rs  mqtt_stub.rs  test_utils.rs
devkit/templates/plugin/: Cargo.toml.template  plugin.json.template
devkit/templates/plugin/src/: main.rs.template
plugins/: monitoring_plugin.json  symbion-plugin-hosts.json  symbion-plugin-notes.json  test_integration.json
pwa-dashboard/: .env.example  index.html  package-lock.json  package.json  vite.config.js
pwa-dashboard/src/: main.js
pwa-dashboard/src/components/: dashboard-app.js
pwa-dashboard/src/services/: agents-service.js  api-service.js  mqtt-service.js
pwa-dashboard/src/widgets/: agent-control-widget.js  agents-network-widget.js  hosts-widget.js  notes-widget.js  plugins-widget.js  system-health-widget.js  widget-registry.js
releases/v1.0.0/: BUILD_WINDOWS.md  GITHUB_RELEASE.md  checksums.sha256
symbion-agent-host/: Cargo.toml  agent.json
symbion-agent-host/src/: config.rs  discovery.rs  main.rs  updater.rs  wizard.rs
symbion-agent-host/src-tauri/: Cargo.toml  tauri.conf.json
symbion-agent-host/src-tauri/src/: index.html  lib.rs  main.rs  updater.rs  wizard.js
symbion-agent-host/src/capabilities/: mod.rs
symbion-agent-host/src/execution/: mod.rs
symbion-agent-host/src/metrics/: mod.rs
symbion-kernel/: Cargo.toml  kernel.yaml  notes.json
symbion-kernel/data/: memo.json
symbion-kernel/src/: agents.rs  config.rs  contracts.rs  health.rs  http.rs  main.rs  models.rs  mqtt.rs  notes_bridge.rs  plugins.rs  state.rs  wol.rs
symbion-kernel/src/ports/: memo.rs  mod.rs
symbion-plugin-hosts/: Cargo.toml
symbion-plugin-hosts/src/: main.rs
symbion-plugin-notes/: Cargo.toml
symbion-plugin-notes/src/: main.rs
test-integration/: Cargo.toml
test-integration/src/: main.rs
