# NewSymbion Workspace - Architecture distribuée modulaire
# 
# COMPOSANTS :
# - symbion-kernel : Serveur central (API REST + Event Bus MQTT + Plugin Manager)
# - symbion-plugin-hosts : Agent monitoring système (heartbeats + Wake-on-LAN)  
# - symbion-plugin-notes : Plugin notes distribuées via MQTT (CRUD complet)
# - devkit : Suite de développement avec scaffolding et tests automatisés
#
# UTILISATION :
# cargo build --workspace       # Build tous les composants  
# cargo test --workspace        # Tests de tous les modules
# cargo run -p symbion-kernel   # Lancer le kernel principal

[workspace]
members = ["symbion-kernel","symbion-plugin-hosts","symbion-plugin-notes","devkit","symbion-agent-host"]
exclude = ["*-plugin", "test-*", "symbion-agent-host/src-tauri"]  # Exclure plugins générés et tests temporaires et Tauri setup
resolver = "2"                    # Resolver moderne pour édition 2021
