[package]
name = "symbion-plugin-notes"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "symbion-plugin-notes"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rumqttc = "0.24.0"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
parking_lot = "0.12"