[package]
name = "symbion-agent-setup"
version = "1.0.0"
description = "Setup wizard for Symbion Agent"
authors = ["Symbion Team"]
license = ""
repository = ""
default-run = "symbion-agent-setup"
edition = "2021"
rust-version = "1.60"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.8", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
dirs = "5.0"
toml = "0.8"
uuid = { version = "1.0", features = ["v4"] }
keyring = "3.6"
reqwest = "0.12"
hostname = "0.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]